[package]
name = "sendeml-rs"
version = "0.1.0"
authors = ["Yuki Ono <ykon0x1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = "0.7"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.3"
lazy_static = "1.4"
